--- a/_posts/2022-1-15-深度学习常用模型.md
+++ b/_posts/2022-1-15-深度学习常用模型.md
@@ -1,3 +1,9 @@
+---
+title: 深度学习常用模型
+categories: [DL]
+comments: true
+---
+
 　　深度学习是解决问题的一系列模型与方法。主流的深度学习模型有CNN、RNN（LSTM）、transformer、VAE、GAN等。但深度学习模型不是深度学习领域中唯一的研究方向，且不一定是最重要的研究方向。除了模型之外，比较重要的还有优化算法、损失函数、采样方法等。
 
 <!--more-->
